[lab-10] migrate lab to meson

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -8,7 +8,11 @@ deps = [
 inc_dirs = [
   '../include',
 ]
-test_files = files('example.cpp')
+test_files = files(
+  'list_unittests.cpp',
+  'queue_unittests.cpp',
+  'stack_unittests.cpp',
+)
 
 extraarg = []
 
